fixed text-align center

--- a/dobot/style.css
+++ b/dobot/style.css
@@ -2,7 +2,6 @@ body{
 	background-color: #1b2326;
 	color:white;
 	font-family:"LFT Etica";
-	text-align: center;
 }
 
 #page-wrap {
